--- a/UnderConstructionApp/Views/Base.lproj/Main.storyboard
+++ b/UnderConstructionApp/Views/Base.lproj/Main.storyboard
@@ -355,60 +355,53 @@
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="arP-Lr-xmX">
                                         <rect key="frame" x="0.0" y="0.0" width="375" height="1000"/>
                                         <subviews>
-                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3py-mY-T8k">
-                                                <rect key="frame" x="0.0" y="0.0" width="375" height="187.5"/>
-                                                <subviews>
-                                                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="uXK-D8-men">
-                                                        <rect key="frame" x="18" y="30" width="338" height="147"/>
-                                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="2x3-gs-BfF">
-                                                            <size key="itemSize" width="338" height="147"/>
-                                                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                                                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
-                                                        </collectionViewFlowLayout>
-                                                        <cells>
-                                                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="bannerCell" id="HbK-TV-Z2q" customClass="BannerCollectionViewCell" customModule="UnderConstructionApp" customModuleProvider="target">
-                                                                <rect key="frame" x="0.0" y="0.0" width="338" height="147"/>
-                                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
-                                                                    <rect key="frame" x="0.0" y="0.0" width="338" height="147"/>
-                                                                    <autoresizingMask key="autoresizingMask"/>
-                                                                    <subviews>
-                                                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="28N-LA-eCN">
-                                                                            <rect key="frame" x="0.0" y="0.0" width="338" height="147"/>
-                                                                        </imageView>
-                                                                    </subviews>
-                                                                </view>
-                                                                <constraints>
-                                                                    <constraint firstItem="28N-LA-eCN" firstAttribute="width" secondItem="HbK-TV-Z2q" secondAttribute="width" id="2nh-gQ-Yfk"/>
-                                                                    <constraint firstItem="28N-LA-eCN" firstAttribute="top" secondItem="HbK-TV-Z2q" secondAttribute="top" id="Odz-xa-brb"/>
-                                                                    <constraint firstItem="28N-LA-eCN" firstAttribute="leading" secondItem="HbK-TV-Z2q" secondAttribute="leading" id="XT0-HC-8q5"/>
-                                                                    <constraint firstItem="28N-LA-eCN" firstAttribute="height" secondItem="HbK-TV-Z2q" secondAttribute="height" id="xrS-2B-d5d"/>
-                                                                </constraints>
-                                                                <connections>
-                                                                    <outlet property="bannerImage" destination="28N-LA-eCN" id="vhy-cj-9cA"/>
-                                                                </connections>
-                                                            </collectionViewCell>
-                                                        </cells>
-                                                        <connections>
-                                                            <outlet property="dataSource" destination="TVx-yg-1e8" id="3fT-nr-PUA"/>
-                                                            <outlet property="delegate" destination="TVx-yg-1e8" id="0kj-5V-Spz"/>
-                                                        </connections>
-                                                    </collectionView>
-                                                </subviews>
+                                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="uXK-D8-men">
+                                                <rect key="frame" x="0.0" y="0.0" width="374" height="186.5"/>
                                                 <color key="backgroundColor" red="1" green="0.86274509799999999" blue="0.10980392160000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="width" secondItem="3py-mY-T8k" secondAttribute="height" multiplier="2:1" id="Xqs-Vh-sx2"/>
+                                                    <constraint firstAttribute="width" secondItem="uXK-D8-men" secondAttribute="height" multiplier="2:1" constant="1" id="olI-yC-8U5"/>
                                                 </constraints>
-                                            </view>
+                                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="2x3-gs-BfF">
+                                                    <size key="itemSize" width="338" height="147"/>
+                                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                                </collectionViewFlowLayout>
+                                                <cells>
+                                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="bannerCell" id="HbK-TV-Z2q" customClass="BannerCollectionViewCell" customModule="UnderConstructionApp" customModuleProvider="target">
+                                                        <rect key="frame" x="0.0" y="20" width="338" height="147"/>
+                                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                                            <rect key="frame" x="0.0" y="0.0" width="338" height="147"/>
+                                                            <autoresizingMask key="autoresizingMask"/>
+                                                            <subviews>
+                                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="28N-LA-eCN">
+                                                                    <rect key="frame" x="20" y="0.0" width="298" height="147"/>
+                                                                </imageView>
+                                                            </subviews>
+                                                        </view>
+                                                        <constraints>
+                                                            <constraint firstItem="28N-LA-eCN" firstAttribute="centerX" secondItem="HbK-TV-Z2q" secondAttribute="centerX" id="3uy-wf-KOe"/>
+                                                            <constraint firstItem="28N-LA-eCN" firstAttribute="centerY" secondItem="HbK-TV-Z2q" secondAttribute="centerY" id="ogm-Xn-DyE"/>
+                                                            <constraint firstItem="28N-LA-eCN" firstAttribute="leading" secondItem="HbK-TV-Z2q" secondAttribute="leading" constant="20" id="t5x-Dm-MoJ"/>
+                                                            <constraint firstItem="28N-LA-eCN" firstAttribute="height" secondItem="HbK-TV-Z2q" secondAttribute="height" id="zsd-bV-Vr9"/>
+                                                        </constraints>
+                                                        <connections>
+                                                            <outlet property="bannerImage" destination="28N-LA-eCN" id="vhy-cj-9cA"/>
+                                                        </connections>
+                                                    </collectionViewCell>
+                                                </cells>
+                                                <connections>
+                                                    <outlet property="dataSource" destination="TVx-yg-1e8" id="3fT-nr-PUA"/>
+                                                    <outlet property="delegate" destination="TVx-yg-1e8" id="0kj-5V-Spz"/>
+                                                </connections>
+                                            </collectionView>
                                         </subviews>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
-                                            <constraint firstItem="3py-mY-T8k" firstAttribute="leading" secondItem="arP-Lr-xmX" secondAttribute="leading" id="1jS-tk-x8b"/>
-                                            <constraint firstAttribute="trailing" secondItem="3py-mY-T8k" secondAttribute="trailing" id="F4R-iG-w7n"/>
-                                            <constraint firstItem="3py-mY-T8k" firstAttribute="width" secondItem="arP-Lr-xmX" secondAttribute="width" id="aM8-tR-LZU"/>
+                                            <constraint firstItem="uXK-D8-men" firstAttribute="leading" secondItem="arP-Lr-xmX" secondAttribute="leading" id="Sn7-Vg-58m"/>
+                                            <constraint firstItem="uXK-D8-men" firstAttribute="centerX" secondItem="arP-Lr-xmX" secondAttribute="centerX" id="fzc-dL-6EE"/>
+                                            <constraint firstItem="uXK-D8-men" firstAttribute="top" secondItem="arP-Lr-xmX" secondAttribute="top" id="hYb-hg-mrn"/>
                                             <constraint firstAttribute="height" constant="1000" id="x7L-WL-bWu"/>
                                         </constraints>
                                     </view>
@@ -426,7 +419,6 @@
                             <constraint firstItem="arP-Lr-xmX" firstAttribute="width" secondItem="KnH-Bt-m3H" secondAttribute="width" id="5R8-iK-IOq"/>
                             <constraint firstItem="4Yx-ZQ-zw7" firstAttribute="top" secondItem="Hu0-qa-Osr" secondAttribute="top" id="ehz-fV-VKz"/>
                             <constraint firstItem="4Yx-ZQ-zw7" firstAttribute="leading" secondItem="Hu0-qa-Osr" secondAttribute="leading" id="k4p-en-GLq"/>
-                            <constraint firstItem="Hu0-qa-Osr" firstAttribute="top" secondItem="3py-mY-T8k" secondAttribute="top" id="l3q-yQ-jWT"/>
                             <constraint firstItem="Hu0-qa-Osr" firstAttribute="trailing" secondItem="4Yx-ZQ-zw7" secondAttribute="trailing" id="p02-1h-XgC"/>
                             <constraint firstItem="Hu0-qa-Osr" firstAttribute="bottom" secondItem="4Yx-ZQ-zw7" secondAttribute="bottom" id="rNV-E1-3OP"/>
                         </constraints>
@@ -435,7 +427,6 @@
                     <navigationItem key="navigationItem" id="ifl-Bp-omZ"/>
                     <size key="freeformSize" width="375" height="1000"/>
                     <connections>
-                        <outlet property="backYellowView" destination="3py-mY-T8k" id="9fa-mN-j0S"/>
                         <outlet property="bannerColletionView" destination="uXK-D8-men" id="sdZ-fl-hWL"/>
                     </connections>
                 </viewController>
