--- a/UnderConstructionApp/Views/Base.lproj/Main.storyboard
+++ b/UnderConstructionApp/Views/Base.lproj/Main.storyboard
@@ -655,7 +655,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RHx-If-48l">
-                                <rect key="frame" x="10" y="244" width="355" height="150"/>
+                                <rect key="frame" x="10" y="266" width="355" height="150"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="150" id="23T-WO-H8S"/>
                                 </constraints>
@@ -664,7 +664,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="GQL-4X-YU2">
-                                <rect key="frame" x="0.0" y="20" width="375" height="598"/>
+                                <rect key="frame" x="0.0" y="64" width="375" height="554"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="barracaCell" rowHeight="120" id="Cyz-iL-RO7" customClass="BarracasTableViewCell" customModule="UnderConstructionApp" customModuleProvider="target">
@@ -765,7 +765,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="30X-IW-XtL">
-                                <rect key="frame" x="0.0" y="270" width="375" height="348"/>
+                                <rect key="frame" x="0.0" y="314" width="375" height="304"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="aiK-CA-7cF">
                                     <size key="itemSize" width="166" height="230"/>
@@ -825,11 +825,11 @@
                                 </connections>
                             </collectionView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="pXb-bG-MAm">
-                                <rect key="frame" x="10" y="20" width="355" height="206"/>
+                                <rect key="frame" x="10" y="64" width="355" height="206"/>
                                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Productos" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kfl-pt-b8W">
-                                <rect key="frame" x="30" y="236" width="315" height="24"/>
+                                <rect key="frame" x="30" y="280" width="315" height="24"/>
                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -855,11 +855,113 @@
                     <connections>
                         <outlet property="logoImageView" destination="pXb-bG-MAm" id="Uak-sN-s1V"/>
                         <outlet property="productsCollectionView" destination="30X-IW-XtL" id="afv-iO-64i"/>
+                        <segue destination="hEv-39-KE6" kind="show" identifier="toProductDetails" id="KpM-ov-Dui"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HIX-Gm-Izc" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2509.5999999999999" y="856.82158920539734"/>
+        </scene>
+        <!--Product Details View Controller-->
+        <scene sceneID="7w8-bu-gy3">
+            <objects>
+                <viewController id="hEv-39-KE6" customClass="ProductDetailsViewController" customModule="UnderConstructionApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="m8m-4N-b5G">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="w9x-V4-HoV">
+                                <rect key="frame" x="40" y="94" width="295" height="24"/>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8XV-cb-jUj">
+                                <rect key="frame" x="40" y="199.5" width="295" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="cOo-y8-3bY">
+                                <rect key="frame" x="40" y="250.5" width="295" height="295"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="cOo-y8-3bY" secondAttribute="height" multiplier="1:1" id="HKL-o8-aVc"/>
+                                </constraints>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Tdq-UQ-tVD">
+                                    <size key="itemSize" width="306" height="291"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="productPhotosCell" id="y40-9e-jil">
+                                        <rect key="frame" x="-5.5" y="0.0" width="306" height="291"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                            <rect key="frame" x="0.0" y="0.0" width="306" height="291"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="FeA-H2-xVv">
+                                                    <rect key="frame" x="0.0" y="0.0" width="306" height="306"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" secondItem="FeA-H2-xVv" secondAttribute="height" multiplier="1:1" id="1IB-MH-YWr"/>
+                                                    </constraints>
+                                                </imageView>
+                                            </subviews>
+                                        </view>
+                                        <constraints>
+                                            <constraint firstItem="FeA-H2-xVv" firstAttribute="top" secondItem="y40-9e-jil" secondAttribute="top" id="0my-FZ-uZi"/>
+                                            <constraint firstItem="FeA-H2-xVv" firstAttribute="centerX" secondItem="y40-9e-jil" secondAttribute="centerX" id="Bxs-Qg-b45"/>
+                                            <constraint firstItem="FeA-H2-xVv" firstAttribute="leading" secondItem="y40-9e-jil" secondAttribute="leading" id="gTF-4Y-gDW"/>
+                                        </constraints>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="E5a-nn-u6g">
+                                <rect key="frame" x="40" y="148" width="295" height="21.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pwm-9T-su2">
+                                <rect key="frame" x="50" y="570.5" width="275" height="32.5"/>
+                                <color key="backgroundColor" red="1" green="0.82352941180000006" blue="0.12549019610000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <state key="normal" title="Comprar Producto"/>
+                                <connections>
+                                    <action selector="buyProductActionButton:" destination="J6F-BO-fNd" eventType="touchUpInside" id="gvb-Ne-AvW"/>
+                                    <action selector="logInStartAction:" destination="DfL-bv-Kn0" eventType="touchUpInside" id="2VE-gf-Cnf"/>
+                                    <action selector="loginActionButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ZKQ-Fv-U6W"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="pwm-9T-su2" firstAttribute="centerX" secondItem="yjX-JK-uSG" secondAttribute="centerX" id="Dl3-8X-AkG"/>
+                            <constraint firstItem="8XV-cb-jUj" firstAttribute="trailing" secondItem="E5a-nn-u6g" secondAttribute="trailing" id="Kkb-fn-mcU"/>
+                            <constraint firstItem="w9x-V4-HoV" firstAttribute="top" secondItem="yjX-JK-uSG" secondAttribute="top" constant="30" id="KoM-me-sJV"/>
+                            <constraint firstItem="E5a-nn-u6g" firstAttribute="trailing" secondItem="w9x-V4-HoV" secondAttribute="trailing" id="QvD-xA-8nI"/>
+                            <constraint firstItem="yjX-JK-uSG" firstAttribute="bottom" secondItem="pwm-9T-su2" secondAttribute="bottom" constant="15" id="Taz-wL-1H0"/>
+                            <constraint firstItem="cOo-y8-3bY" firstAttribute="centerX" secondItem="yjX-JK-uSG" secondAttribute="centerX" id="ULY-TE-mg8"/>
+                            <constraint firstItem="pwm-9T-su2" firstAttribute="leading" secondItem="yjX-JK-uSG" secondAttribute="leading" constant="50" id="Uyk-4z-X02"/>
+                            <constraint firstItem="w9x-V4-HoV" firstAttribute="centerX" secondItem="yjX-JK-uSG" secondAttribute="centerX" id="XH2-ka-cmm"/>
+                            <constraint firstItem="E5a-nn-u6g" firstAttribute="top" secondItem="w9x-V4-HoV" secondAttribute="bottom" constant="30" id="Xdp-2P-aRf"/>
+                            <constraint firstItem="8XV-cb-jUj" firstAttribute="leading" secondItem="E5a-nn-u6g" secondAttribute="leading" id="Z7Z-bZ-2lD"/>
+                            <constraint firstItem="E5a-nn-u6g" firstAttribute="leading" secondItem="w9x-V4-HoV" secondAttribute="leading" id="ZN3-Ly-xKT"/>
+                            <constraint firstItem="pwm-9T-su2" firstAttribute="top" secondItem="cOo-y8-3bY" secondAttribute="bottom" constant="25" id="bXq-gd-6ig"/>
+                            <constraint firstItem="cOo-y8-3bY" firstAttribute="top" secondItem="8XV-cb-jUj" secondAttribute="bottom" constant="30" id="bn1-Z3-C7q"/>
+                            <constraint firstItem="w9x-V4-HoV" firstAttribute="leading" secondItem="yjX-JK-uSG" secondAttribute="leading" constant="40" id="h1u-Um-fo9"/>
+                            <constraint firstItem="cOo-y8-3bY" firstAttribute="leading" secondItem="yjX-JK-uSG" secondAttribute="leading" constant="40" id="o9T-y1-lae"/>
+                            <constraint firstItem="8XV-cb-jUj" firstAttribute="top" secondItem="E5a-nn-u6g" secondAttribute="bottom" constant="30" id="tNI-cV-DBk"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="yjX-JK-uSG"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="3v5-1T-3fB" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3508" y="849.62518740629696"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="zdT-Ye-W9h">
@@ -989,7 +1091,7 @@
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="n17-Rb-B2k"/>
-        <segue reference="aCF-eo-sAT"/>
+        <segue reference="6xs-oa-Eow"/>
         <segue reference="bcT-yV-Wuq"/>
     </inferredMetricsTieBreakers>
 </document>
